--- a/coronavirus_mapper/coronavirus_mapper/templates/navbar.html
+++ b/coronavirus_mapper/coronavirus_mapper/templates/navbar.html
@@ -1,9 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+    <a class="navbar-brand" href="#">COVID-19 mapper</a>
 
     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Submit Report</button>
 
