--- a/coronavirus_mapper/reports/templates/reports/map.html
+++ b/coronavirus_mapper/reports/templates/reports/map.html
@@ -3,8 +3,30 @@
 {% block content%}
 <div id="map">
     <div class="leaflet-top leaflet-right mt-2 mr-2">
-        <input type="button" id="add-report" value="Add a report" onclick="" class="btn btn-success" />
+        <input type="button" id="add-report" value="Add a report" onclick="" class="btn btn-success" data-toggle="modal" data-target="#reportModal" />
     </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="reportModal" tabindex="-1" role="dialog" aria-labelledby="reportModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <strong class="modal-title" id="reportModalLabel">Submit report</strong>
+
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>Form goes here</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
 </div>
 {% endblock content %}
 
