--- a/coronavirus_mapper/reports/templates/reports/map.html
+++ b/coronavirus_mapper/reports/templates/reports/map.html
@@ -23,7 +23,7 @@
             <form>
                 <div class="form-group">
                     <label for="id_first_symptomatic">First symptomatic:</label>
-                    <input type="text" name="first_symptomatic" required="required" id="id_first_symptomatic" class="form-control">
+                    <input type="date" name="first_symptomatic" required="required" id="id_first_symptomatic" class="form-control">
                 </div>
 
                 <div class="form-group">
