--- a/coronavirus_mapper/reports/templates/reports/map.html
+++ b/coronavirus_mapper/reports/templates/reports/map.html
@@ -1,9 +1,13 @@
 {% extends "base.html" %}
 
+{% load i18n %}
+
 {% block content%}
 <div id="map">
     <div class="leaflet-top leaflet-right mt-2 mr-2">
-        <input type="button" id="add-report" value="Add a report" onclick="" class="btn btn-success" data-toggle="modal" data-target="#reportModal" />
+        <button type="button" id="add-report" class="btn btn-success" data-toggle="modal" data-target="#reportModal" />
+            {% trans "Add report" %}
+        </button>
     </div>
 </div>
 
@@ -12,7 +16,9 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
         <div class="modal-header">
-            <strong class="modal-title" id="reportModalLabel">Submit report</strong>
+            <strong class="modal-title" id="reportModalLabel">
+               {% trans "Submit report" %}
+            </strong>
 
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
@@ -22,18 +28,27 @@
         <div class="modal-body">
             <form id="reportForm">
                 <div class="form-group">
-                    <label for="id_first_symptomatic">First symptomatic:</label>
+                    <label for="id_first_symptomatic">
+                        {% trans "First symptomatic" %}
+                    </label>
                     <input type="date" name="first_symptomatic" required="required" id="id_first_symptomatic" class="form-control">
                 </div>
 
                 <div class="form-group">
-                    <label for="id_location_map">Location:</label>
+                    <label for="id_location_map">
+                        {% trans "Location" %}
+                    </label>
                     <div id="id_location_map" style="width: 100%"></div>
                     <p id="location_map_validation_message" class="bg-danger text-white mt-2 p-2" style="display: none;">Please choose a location for this report.</p>
                 </div>
 
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">
+                    {% trans "Close" %}
+                </button>
+
+                <button type="submit" class="btn btn-primary">
+                    {% trans "Submit" %}
+                </button>
             </form>
         </div>
     </div>
