--- a/coronavirus_mapper/reports/templates/reports/map.html
+++ b/coronavirus_mapper/reports/templates/reports/map.html
@@ -3,17 +3,8 @@
 {% load i18n %}
 
 {% block content%}
-{% comment %}
-<div id="map">
-    <div class="leaflet-top leaflet-right mt-2 mr-2">
-        <button type="button" id="add-report" class="btn btn-success" data-toggle="modal" data-target="#reportModal" />
-            {% trans "Add report" %}
-        </button>
-    </div>
-</div>
-{% endcomment %}
+<div id="map" class="h-100 w-100"></div>
 
-<div id="map" class="map"></div>
 
 <!-- Modal -->
 <div class="modal fade" id="reportModal" tabindex="-1" role="dialog" aria-labelledby="reportModalLabel" aria-hidden="true">
@@ -21,7 +12,7 @@
         <div class="modal-content">
         <div class="modal-header">
             <strong class="modal-title" id="reportModalLabel">
-               {% trans "Submit report" %}
+                {% trans "Submit report" %}
             </strong>
 
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -161,14 +152,6 @@ $('#reportForm').submit(function(event) {
 
 {% block extra_css %}
 <style>
-    html, body, #map {
-        height: 100%;
-        width: 100%;
-    }
-
-    .btn {
-        pointer-events: auto;
-    }
     #id_location_map {
         height: 250px;
     }
