Add face with thermometer and face with mask

--- a/coronavirus_mapper/coronavirus_mapper/templates/base.html
+++ b/coronavirus_mapper/coronavirus_mapper/templates/base.html
@@ -36,11 +36,11 @@
     <div class="d-flex h-100 flex-column">
         <nav class="navbar navbar-expand-md navbar-light">
             <span class="navbar-brand">
-                {% trans "Coronavirus symptoms" %}
+                🤒 {% trans "Coronavirus symptoms" %}
             </span>
             <div class="ml-auto">
                 <button type="button" id="add-report" class="btn btn-info" data-toggle="modal" data-target="#reportModal">
-                    {% trans "Add report" %}
+                    😷 {% trans "Add report" %}
                 </button>
             </div>
         </nav>
