--- a/coronavirus_mapper/reports/templates/reports/map.html
+++ b/coronavirus_mapper/reports/templates/reports/map.html
@@ -12,7 +12,7 @@
         <div class="modal-content">
         <div class="modal-header">
             <strong class="modal-title" id="reportModalLabel">
-                {% trans "Submit report" %}
+                😷 {% trans "Submit report" %}
             </strong>
 
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
