Don't allow "future" reports

--- a/coronavirus_mapper/reports/templates/reports/map.html
+++ b/coronavirus_mapper/reports/templates/reports/map.html
@@ -81,8 +81,11 @@ function initializeReportModalMap() {
 
 function initializeReportModalCalendarWidget() {
     // Add calendar widget to "first symptomatic" field
+    // default to today for convenience
+    // don't allow "future" reports
     var firstSymptomaticField = flatpickr("#id_first_symptomatic", {
         defaultDate: 'today',
+        maxDate: 'today',
     });
 }
 
