Remove bg-warning

--- a/coronavirus_mapper/coronavirus_mapper/templates/base.html
+++ b/coronavirus_mapper/coronavirus_mapper/templates/base.html
@@ -45,7 +45,7 @@
             </div>
         </nav>
     
-        <div class="container-fluid d-flex h-100 bg-warning p-0 m-0">
+        <div class="container-fluid d-flex h-100 p-0 m-0">
             {% block content %}{% endblock %}
         </div>
     </div>
