Move JavaScript to separate files

--- a/coronavirus_mapper/reports/templates/reports/map.html
+++ b/coronavirus_mapper/reports/templates/reports/map.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% load i18n %}
+{% load static %}
 
 {% block content%}
 <div id="map" class="h-100 w-100"></div>
@@ -51,150 +52,8 @@
 {% endblock content %}
 
 {% block extra_js %}
-<script>
-// user location point
-// changes position when user clicks on map
-var userLocationPoint = new ol.geom.Point([0, 0]);
-
-function initializeReportModalMap() {
-    // remove any old location map
-    // to prevent duplicate remder
-    $('#id_location_map').empty();
-    
-    var reportMap = new ol.Map({
-        target: 'id_location_map',
-        layers: [
-            // OSM base map
-            new ol.layer.Tile({
-                source: new ol.source.OSM()
-            }),
-            // User location layer
-            new ol.layer.Vector({
-                source: new ol.source.Vector({
-                    features: [
-                        new ol.Feature({
-                            geometry: userLocationPoint
-                        }),
-                    ]
-                }),
-            }),
-        ],
-        view: new ol.View({
-            projection: 'EPSG:4326',
-            center: [0, 0],
-            zoom: 1
-        })
-    });
-
-    reportMap.on('click', function (event) {      
-        // anonymize location by reducing precision
-        var anonymizedLocation = anonymizeLocation(event.coordinate);
-
-        // update location marker position
-        userLocationPoint.setCoordinates(anonymizedLocation);
-    });
-}
-
-/*
-Anonymize the location data
-by reducing decimal degree precision
-*/
-function anonymizeLocation(lonLat) {
-    var precision = 3;
-
-    // Reduce coordinate accuracy for anonymization
-    return lonLat.map(function (coordinate) {
-        // how may decimal points to keep
-        // fewer is less precise
-        return coordinate.toFixed(precision)
-    });
-}
-
-// Add calendar widget to "first symptomatic" field
-// default to today for convenience
-// don't allow "future" reports
-var firstSymptomaticField = flatpickr("#id_first_symptomatic", {
-    defaultDate: 'today',
-    maxDate: 'today',
-});
-
-var map = new ol.Map({
-    target: 'map',
-    layers: [
-        new ol.layer.Tile({
-            source: new ol.source.OSM()
-        })
-    ],
-    view: new ol.View({
-        center: [0, 0],
-        projection: 'EPSG:4326',
-        zoom: 1
-    })
-});
-
-jQuery.ajax("/reports/reports_json/", {
-    success: function (reports) {
-        // Add report markers to map
-        var reportFeatures = reports.features.map(function (report) {
-            var reportPoint = new ol.geom.Point(report.geometry.coordinates);
-
-            return new ol.Feature(reportPoint);
-        });
-
-        var source = new ol.source.Vector({
-            features: reportFeatures,
-        });
-
-        var clusterSource = new ol.source.Cluster({
-            source: source,
-            distance: 40,
-        });
-
-        var clusterLayer = new ol.layer.Vector({
-            source: clusterSource,
-        });
-
-        map.addLayer(clusterLayer);
-    }
-});
-
-// Make sure location map renders correctly in modal
-$('#reportModal').on('shown.bs.modal', function () {
-    initializeReportModalMap();
-});
-
-$('#reportForm').submit(function(event) {
-    event.preventDefault();
-
-    // format field data for sending to server
-    var firstSymptomatic = moment(firstSymptomaticField.selectedDates[0]).format('YYYY-MM-DD');
-    var coordinates = userLocationPoint.getCoordinates().map(function (coordinate) {
-        return parseFloat(coordinate);
-    });
-
-    var reportData = {
-        first_symptomatic: firstSymptomatic,
-        location: {
-            "type": "Point",
-            "coordinates": coordinates,
-        },
-    };
-
-    jQuery.ajax ({
-        url: "/reports/reports_json/",
-        type: "POST",
-        data: JSON.stringify(reportData),
-        dataType: "json",
-        contentType: "application/json; charset=utf-8",
-        success: function(){
-            window.location.reload();
-        },
-        error: function (error) {
-            console.log(error);
-        }
-    });
-});
-</script>
+<script src="{% static '/js/reports/reports.js' %}"></script>
+<script src="{% static '/js/reports/form.js' %}"></script>
 {% endblock extra_js %}
 
 {% block extra_css %}
