--- a/coronavirus_mapper/reports/templates/reports/map.html
+++ b/coronavirus_mapper/reports/templates/reports/map.html
@@ -53,7 +53,7 @@
 
 {% block extra_js %}
 <script src="{% static '/js/reports/reports.js' %}"></script>
-<script src="{% static '/js/reports/form.js' %}"></script>
+<script src="{% static '/js/reports/modal.js' %}"></script>
 {% endblock extra_js %}
 
 {% block extra_css %}
